<resources>
    <string name="app_name">博物馆</string>
    <string name="action_logout">注销</string>
    <string name="title_activity_login">登录</string>
    <string name="publish">发布</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="goods_discription">商品描述</string>
    <string name="seletct_a_pic">从相册选择一张照片</string>
    <string name="submit">提交</string>
    <string name="detail">详情</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">注册并登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮件格式错误</string>
    <string name="error_invalid_password">密码需要大于 4 位</string>
    <string name="error_incorrect_password">您输入的密码错误</string>
    <string name="error_field_required">这个是必填项</string>
    <string name="error_field_register">用户名已存在</string>
    <string name="title_activity_register">注册</string>
</resources>
